@@ -2,6 +2,11 @@ django-sitecats changelog
 =========================
 
 
+Unreleased
+----------
+* Fix search in Django admin.
+
+
 v1.2.0 [2020-05-29]
 -------------------
 ! Dropped support for Django<2.0.
